# yabause

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Jenkinsfile  LICENSE  README.md  appveyor.yml  circle.yml
mini18n/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  example.vcproj  mini18n.sln  mini18n.vcproj
mini18n/doc/: mini18n.3  mini18n_set_locale.3
mini18n/example/: Makefile.am  fr  main.c
mini18n/src/: CMakeLists.txt  Makefile.am  mini18n-multi.c  mini18n-multi.h  mini18n.c  mini18n.h  mini18n_pv_conv.h  mini18n_pv_conv_windows.c  mini18n_pv_conv_windows.h  mini18n_pv_data.c  mini18n_pv_data.h  mini18n_pv_file_po.c  mini18n_pv_file_yts.c  mini18n_pv_hash.c  mini18n_pv_hash.h  mini18n_pv_list.c  mini18n_pv_list.h
mini18n/tools/: Makefile.am  resl10n.c
yabause/: AUTHORS  CMakeLists.txt  CMakeSettings.json  ChangeLog  EULA.txt  INSTALL  Makefile.am  Makefile.in  README  README.DC  README.LIN  README.MAC  README.PSP  README.QT  README.WII  README.WIN  README.md  TODO  USAGE.md  acinclude.m4  aclocal.m4  autogen.sh  config.h  configure  configure.in  generate_build_from_cmake.ps1
yabause/CMakeTests/: FindFFmpeg.cmake  FindGLEW.cmake
yabause/autopackage/: default.apspec  default.apspec.in
yabause/debian/: README.Debian  changelog  control  copyright  docs  files  rules
yabause/doc/: Doxyfile.in  Makefile.am  Makefile.in  compilation.docbook  dreamcast.docbook  howto.txt  linux.docbook  using.docbook  windows.docbook  yabause.1  yabause.docbook
yabause/l10n/: CMakeLists.txt  Makefile.am  kronos_de.yts  kronos_default.yts  kronos_es.yts  kronos_fr.yts  yabause_ar.yts  yabause_da.yts  yabause_de.yts  yabause_default.yts  yabause_el.yts  yabause_en.csv  yabause_en.yts  yabause_es.yts  yabause_es_419.yts  yabause_fr.yts  yabause_it.yts  yabause_ja.yts  yabause_ko.yts  yabause_lt.yts  yabause_nl.yts  yabause_pl_PL.yts  yabause_pt.yts  yabause_pt_BR.yts  yabause_ru.yts  yabause_sv.yts  yabause_tr.yts  yabause_zh_CN.yts  yabause_zh_TW.yts
yabause/lightning/: Makefile.am  core-common.h  lightning.h
yabause/lightning/i386/: core.h
yabause/lightning/ppc/: asm.h  core.h  funcs.h
yabause/lightning/sparc/: asm.h  core.h  fp.h  funcs.h
yabause/src/: 2xbrz_shader.h  4xbrz_shader.h  BackupManager.cpp  BackupManager.h  CMakeLists.txt  Counter.cpp  Makefile.am  Makefile.dc  Makefile.in  Makefile.mng  Makefile.wii  PlayRecorder.cpp  PlayRecorder.h  about.c  about.h  bicubic_shader.h  bios.c  bios.h  cd-freebsd.c  cd-libretro.c  cd-linux.c  cd-macosx.c  cd-netbsd.c  cd-web.cpp  cd-windows.c  cd.c  cd.cc  cd.hh  cd_drive.c  cd_drive.h  cdbase.c  cdbase.cc  cdbase.h  cdbase.hh  cheat.c  cheat.h  cmdline.c  cmdline.h  coffelf.c  coffelf.h  (+208 more)
yabause/src/android/: .gitignore  AndroidManifest.xml  AndroidManifest.xml.in  CMakeLists.txt  android.cmake  android.toolchain.cmake  arm64-v8a.cmake  armeabi.cmake  autotest_android.py  build.gradle  gradle.properties  gradle.properties.in  settings.gradle  x86.cmake
yabause/src/aosdk/: ao.h  corlett.c  eng_ssf.c  ssf.c
yabause/src/c68k/: CMakeLists.txt  Makefile.am  Makefile.in  c68k.c  c68k.h  c68k_ini.inc  c68k_op0.inc  c68k_op1.inc  c68k_op2.inc  c68k_op3.inc  c68k_op4.inc  c68k_op5.inc  c68k_op6.inc  c68k_op7.inc  c68k_op8.inc  c68k_op9.inc  c68k_opA.inc  c68k_opB.inc  c68k_opC.inc  c68k_opD.inc  c68k_opE.inc  c68k_opF.inc  c68kexec.c  c68kmac.inc  configure  configure.in  gen68k.c  gen68k.h  gen68k.inc  types.h
yabause/src/carbon/: CMakeLists.txt  Makefile.am  Makefile.in  build_dmg.sh  cpustatus.c  cpustatus.h  main.c  settings.c  settings.h
yabause/src/cocoa/: CMake-Info.plist  CMakeLists.txt  PerCocoa.m  Yabause-Info.plist  YabauseController.h  YabauseController.m  YabauseGLView.m  YabausePrefsController.h  YabausePrefsController.m  main.m  vidgcd.c
yabause/src/dreamcast/: Makefile.am  Makefile.in  cd.c  cd.cc  cd.s  localtime.c  perdc.c  perdc.h  viddc.c  viddc.h  yui.c  yui.cc
yabause/src/freebsd/: Makefile.am  Makefile.in  cd.c
yabause/src/gameshw/: dsplist.txt
yabause/src/gdb/: client.c  client.h  packet.c  stub.c
yabause/src/glfw/: CMakeLists.txt  Roboto-Regular.h  external_libpng.cmake  external_zlib.cmake  main.cpp  perf.c
yabause/src/gtk/: CMakeLists.txt  Makefile.am  Makefile.in  gtk-compat.c  gtk-compat.h  gtkglwidget.c  gtkglwidget.h  main.c  menu.c  pergtk.c  pergtk.h  settings.c  settings.h  yabause.desktop  yuifileentry.c  yuifileentry.h  yuiinputentry.c  yuiinputentry.h  yuim68k.c  yuim68k.h  yuimem.c  yuimem.h  yuipage.c  yuipage.h  yuirange.c  yuirange.h  yuiresolution.c  yuiresolution.h  yuiscreenshot.c  yuiscreenshot.h  yuiscsp.c  yuiscsp.h  yuiscudsp.c  yuiscudsp.h  yuish.c  yuish.h  yuitransfer.c  yuitransfer.h  yuivdp1.c  yuivdp1.h  (+6 more)
yabause/src/ios/: CMakeLists.txt  iOS.cmake  osdcore.c  osdcore.h  osdcore_ios.h  yui.cpp
yabause/src/jit/: hash.c  hash.cc  hash.h  hash.hh  lru2.c  lru2.cc  lru2.h  lru2.hh
yabause/src/libretro/: Makefile  Makefile.common  README.md  Tupfile  glsym_private.c  glsym_private.h  libretro.c  libretro_core_options.h  libretro_core_options_intl.h  yabause_griffin.c
yabause/src/linux/: CMakeLists.txt  Makefile.am  Makefile.in  cd.c  cd.cc  cd.hh  debug.c  icon.xpm  main.c  main_gl_test.c  main_test.c  yabause_logo.xpm  yui.c  yui.cc  yuiconf.h
yabause/src/macosx/: MainClass.h  MainClass.mm  Makefile.am  Makefile.in  PreferenceController.h  PreferenceController.m  SDLMain.h  SDLMain.m  Yabause Dossier.icns  YabauseROMs.icns  cd.c  cd.cc  cd.h  cd.hh  yui.c  yui.cc  yui.hh
yabause/src/macosx-new/: CDDrivesManager.h  CDDrivesManager.m  Controller.h  Controller.m  Info.plist  cd.c  main.m  yui.c  yui.h
yabause/src/musashi/: CMakeLists.txt  m68kconf.h  m68kcpu.c  m68kcpu.h  m68kmake.c  m68kopac.c  m68kopdm.c  m68kopnz.c  m68kops.c  m68kops.h
yabause/src/nanovg/: Roboto-Bold.h  nanovg.c  (+5 more)
yabauseut/: CMakeLists.txt
yabauseut/src/: CMakeLists.txt  cart.c  cdb.c  cdb.h  dsp.c  dsp.h  main.c  main.h  mpeg.c  mpeg.h  scsp.c  scsp.h  scu.c  sh2.c  smpc.c  smpc.h  tests.c  tests.h  vdp1.c  vdp1.h  vdp2.c  vdp2.h
(+1316 files in other folders)
